--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -66,6 +66,72 @@
   }
 }
 
+@layer base {
+
+  /* universal-color-dark-1  */
+  .btnd1 {
+    @apply !bg-neutral-300;
+  }
+
+  /* universal-color-white-1  */
+  .btnw1 {
+    @apply border-[0.5px] !bg-neutral-400/30;
+  }
+
+  /* ----------------------------------------------------------------------- */
+
+  /* input-color-dark-1  */
+  .id1 {
+    @apply border-none !bg-neutral-300 !text-neutral-950 placeholder:!text-neutral-400;
+  }
+
+  /* input-color-white-1  */
+  .iw1 {
+    @apply border !bg-neutral-200 !text-neutral-950 placeholder:!text-neutral-400;
+  }
+
+  /* ----------------------------------------------------------------------- */
+
+  /* bg-color-dark-1 */
+  .bcd1 {
+    @apply bg-gradient-to-r from-neutral-950 via-zinc-700 to-neutral-950;
+  }
+
+  .bcw1 {
+    @apply bg-gradient-to-r from-neutral-300 via-zinc-400 to-neutral-300;
+  }
+
+  .bcd2 {
+    @apply bg-gradient-to-b from-neutral-700 to-zinc-800;
+  }
+
+  .bcw2 {
+    @apply bg-gradient-to-b from-neutral-300 to-zinc-400;
+  }
+
+  .bcw3 {
+    @apply bg-transparent;
+  }
+
+  /* ----------------------------------------------------------------------- */
+
+  /* text-dark-1 */
+  .td1 {
+    @apply !font-light text-neutral-900;
+  }
+  .tw1 {
+    @apply !font-light text-neutral-50;
+  }
+
+  .td2 {
+    @apply !font-light !text-neutral-500;
+  }
+  .tw2 {
+    @apply !font-light !text-neutral-500;
+  }
+  
+}
+
 /* ----------------------------------------------------------------------- */
 
 .text-black-stroke-thin {
@@ -74,73 +140,48 @@
 }
 
 /* ----------------------------------------------------------------------- */
+/* Loading анимация */
 
-/* universal-color-dark-1  */
-.btnd1 {
-  @apply !bg-neutral-300;
+@keyframes ldio-rpinwye8j0b {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-
-/* universal-color-white-1  */
-.btnw1 {
-  @apply border-[0.5px] !bg-neutral-400/30;
+.ldio-rpinwye8j0b div {
+  position: absolute;
+  animation: ldio-rpinwye8j0b 1s linear infinite;
+  width: 160px;
+  height: 160px;
+  top: 20px;
+  left: 20px;
+  border-radius: 50%;
+  box-shadow: 0 4px 0 0 #d0c5c6;
+  transform-origin: 80px 82px;
 }
-
+.loadingio-eclipse {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+}
+.ldio-rpinwye8j0b {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+.ldio-rpinwye8j0b div {
+  box-sizing: content-box;
+}
 /* ----------------------------------------------------------------------- */
-
-/* input-color-dark-1  */
-.id1 {
-  @apply border-none !bg-neutral-300 !text-neutral-950 placeholder:!text-neutral-400;
-}
-
-/* input-color-white-1  */
-.iw1 {
-  @apply border !bg-neutral-200 !text-neutral-950 placeholder:!text-neutral-400;
-}
-
-/* ----------------------------------------------------------------------- */
-
-/* bg-color-dark-1 */
-.bcd1 {
-  @apply bg-gradient-to-r from-neutral-950 via-zinc-700 to-neutral-950;
-}
-
-.bcw1 {
-  @apply bg-gradient-to-r from-neutral-300 via-zinc-400 to-neutral-300;
-}
-
-.bcd2 {
-  @apply bg-gradient-to-b from-neutral-700 to-zinc-800;
-}
-
-.bcw2 {
-  @apply bg-gradient-to-b from-neutral-300 to-zinc-400;
-}
-
-.bcw3 {
-  @apply bg-transparent;
-}
-
-/* ----------------------------------------------------------------------- */
-
-/* text-color-dark-1 */
-.td1 {
-  @apply !font-light text-neutral-900;
-}
-/* text-color-white-1 */
-.tw2 {
-  @apply !font-light !text-neutral-500;
-}
-/* text-color-dark-1 */
-.td2 {
-  @apply !font-light !text-neutral-500;
-}
-/* text-color-white-1 */
-.tw1 {
-  @apply !font-light text-neutral-50;
-}
-
-
-/* ---------------------------------------------------------------------- */
 
 .horizontal-mask {
   -webkit-mask-image: linear-gradient(
@@ -160,18 +201,19 @@
 }
 .vertical-mask {
   -webkit-mask-image: linear-gradient(
-    to top,
-    transparent 2%,
-    black 50%,
-    black 50%,
-    transparent 98%
+    to bottom,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
   );
+
   mask-image: linear-gradient(
-    to top,
-    transparent 2%,
-    black 50%,
-    black 50%,
-    transparent 98%
+    to bottom,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
   );
 }
 
