--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -3,146 +3,157 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-
-    --radius: 0.5rem;
+  /* first level: color  */
+  .bg-primary {
+    /* white */
+    @apply bg-neutral-100;
+    /* dark */
+    @apply dark:bg-neutral-900;
   }
 
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+  /* second level: color  */
+  .bg-glass {
+    /* white */
+    @apply bg-neutral-200/60 supports-[backdrop-filter]:bg-neutral-200/60;
+    /* dark */
+    @apply dark:bg-neutral-800/60 dark:supports-[backdrop-filter]:bg-neutral-800/60;
+    /* main */
+    @apply backdrop-blur-[4px];
+  }
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+  .card-primary {
+    /* white */
+    @apply bg-neutral-200 supports-[backdrop-filter]:bg-neutral-200;
+    /* dark */
+    @apply dark:bg-neutral-800 dark:supports-[backdrop-filter]:bg-neutral-800;
+    /* main */
+    @apply border-none backdrop-blur-[4px];
+  }
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+  /* third level: color  */
+  .button-primary {
+    /* white */
+    @apply bg-neutral-300 !text-neutral-500 dark:border-none;
+    /* dark */
+    @apply dark:bg-neutral-700 dark:!text-neutral-400;
+    /* main */
+    @apply !font-[200];
+  }
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+  .button-secondary {
+    /* white */
+    @apply bg-neutral-300 !text-neutral-500 dark:border-none;
+    /* dark */
+    @apply dark:bg-neutral-700 dark:!text-neutral-300;
+    /* main */
+    @apply !font-[200];
+  }
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+  .input-primary {
+    /* white */
+    @apply bg-neutral-300 text-neutral-700 placeholder-neutral-100;
+    /* dark */
+    @apply dark:bg-neutral-700 dark:text-neutral-300 dark:!placeholder-neutral-500;
+    /* main */
+    @apply border-none border-neutral-950/10 focus-visible:!outline-[0.1px] focus-visible:!ring-[1px];
+  }
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+  .input-warning {
+    /* white */
+    @apply bg-neutral-100/50 text-neutral-900 dark:bg-neutral-800 dark:text-neutral-200;
+    /* dark */
+    @apply dark:bg-neutral-700 dark:text-neutral-300 dark:!placeholder-neutral-800;
+    /* main */
+    @apply border-warning-500/50;
+  }
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+  .text-primary {
+    /* white */
+    @apply text-neutral-500;
+    /* dark */
+    @apply dark:text-neutral-400;
+    /* main */
+    @apply !font-[200] transition-all;
+  }
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
+  .text-secondary {
+    /* white */
+    @apply text-neutral-400;
+    /* dark */
+    @apply dark:text-neutral-600;
+    /* main */
+    @apply !font-[200] transition-all;
+  }
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+  /* fourth level: color  */
+
+  /* other level: color  */
+
+  .hover-color-primary {
+    /* white */
+    @apply hover:!text-neutral-600;
+    /* dark */
+    @apply dark:hover:!text-neutral-300;
   }
 }
 
 @layer base {
-  .button-dark {
-    @apply !bg-neutral-300;
-  }
-
-  .button-white {
-    @apply !border-[0.5px] !border-white !bg-neutral-400/30;
-  }
-
-  /* ----------------------------------------------------------------------- */
-
-  .input-dark {
-    @apply border-none !bg-neutral-300 !text-neutral-950 placeholder:!text-neutral-400;
-  }
-
-  .input-white {
-    @apply border !bg-neutral-200 !text-neutral-950 placeholder:!text-neutral-400;
-  }
-
-  /* ----------------------------------------------------------------------- */
-
-  .third-gradient-dark {
-    @apply bg-gradient-to-r from-neutral-950 via-zinc-700 to-neutral-950;
-  }
-
-  .third-gradient-white {
-    @apply bg-gradient-to-r from-neutral-300 via-zinc-400 to-neutral-300;
-  }
-
-  .second-gradient-dark {
-    @apply bg-gradient-to-b from-neutral-700 to-zinc-800;
-  }
-
-  .second-gradient-white {
-    @apply bg-gradient-to-b from-neutral-300 to-zinc-400;
-  }
-
-  /* ----------------------------------------------------------------------- */
-
-  .text-dark-1 {
-    @apply !font-light text-neutral-900;
-  }
-  .text-white-1 {
-    @apply !font-light text-neutral-50;
-  }
-
-  .text-dark-2 {
-    @apply !font-light !text-neutral-500;
-  }
-  .text-white-2 {
-    @apply !font-light !text-neutral-500;
-  }
-
-  /* ----------------------------------------------------------------------- */
-
   .button-popover-trigger-in-drawer {
-    @apply inline-flex h-10 w-10 cursor-pointer items-center justify-center rounded-md p-[12px] hover:bg-neutral-400/20 hover:dark:bg-neutral-950/20 focus-visible:outline-none focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50;
+    @apply inline-flex h-10 w-10 cursor-pointer items-center justify-center rounded-md p-[12px] hover:bg-neutral-500/20 focus-visible:outline-none focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 hover:dark:bg-neutral-950/20;
   }
 
   .svg-icon-stroke {
-    @apply dark:stroke-neutral-200  stroke-neutral-700;
+    @apply stroke-neutral-700  dark:stroke-neutral-200;
   }
 
   .svg-icon-fill {
-    @apply dark:fill-neutral-200 fill-neutral-700;
+    @apply fill-neutral-700 dark:fill-neutral-200;
   }
 
+  /* ----------------------------------------------------------------------- */
+
+  .horizontal-mask {
+    -webkit-mask-image: linear-gradient(
+      to right,
+      transparent 3%,
+      black 50%,
+      black 50%,
+      transparent 95%
+    );
+    mask-image: linear-gradient(
+      to right,
+      transparent 3%,
+      black 50%,
+      black 50%,
+      transparent 95%
+    );
+  }
+  .vertical-mask {
+    -webkit-mask-image: linear-gradient(
+      to bottom,
+      transparent,
+      black 10%,
+      black 90%,
+      transparent
+    );
+
+    mask-image: linear-gradient(
+      to bottom,
+      transparent,
+      black 10%,
+      black 90%,
+      transparent
+    );
+  }
+
+  /* ----------------------------------------------------------------------- */
+
+  .text-black-stroke-thin {
+    -webkit-text-stroke: 0.5px black;
+    text-stroke: 0.5px black; /* Это нестандартное свойство и может не поддерживаться в некоторых браузерах */
+  }
 }
 
-/* ----------------------------------------------------------------------- */
-
-.text-black-stroke-thin {
-  -webkit-text-stroke: 0.5px black;
-  text-stroke: 0.5px black; /* Это нестандартное свойство и может не поддерживаться в некоторых браузерах */
-}
-
-/* ----------------------------------------------------------------------- */
 /* Loading анимация */
 
 @keyframes ldio-rpinwye8j0b {
@@ -164,7 +175,7 @@
   top: 20px;
   left: 20px;
   border-radius: 50%;
-  box-shadow: 0 4px 0 0 #d0c5c6;
+  box-shadow: 0 4px 0 0 #d0c5c696;
   transform-origin: 80px 82px;
 }
 .loadingio-eclipse {
@@ -183,39 +194,4 @@
 }
 .ldio-rpinwye8j0b div {
   box-sizing: content-box;
-}
-/* ----------------------------------------------------------------------- */
-
-.horizontal-mask {
-  -webkit-mask-image: linear-gradient(
-    to right,
-    transparent 3%,
-    black 50%,
-    black 50%,
-    transparent 95%
-  );
-  mask-image: linear-gradient(
-    to right,
-    transparent 3%,
-    black 50%,
-    black 50%,
-    transparent 95%
-  );
-}
-.vertical-mask {
-  -webkit-mask-image: linear-gradient(
-    to bottom,
-    transparent,
-    black 10%,
-    black 90%,
-    transparent
-  );
-
-  mask-image: linear-gradient(
-    to bottom,
-    transparent,
-    black 10%,
-    black 90%,
-    transparent
-  );
 }
